src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>CnP_PaaS__Recurring__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recurring ID</label>
        <referenceTo>CnP_PaaS__CnPRecurring__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Intake__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intake</label>
        <referenceTo>Intake__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trend_Credit_Score__c</fullName>
        <formula>IF(
ISBLANK( ContactId ),
&quot;N/A&quot;,
 Contact.Trend_Credit_Score__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trend Credit Score</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trend_Debt__c</fullName>
        <formula>IF( 
ISBLANK( ContactId ), 
&quot;N/A&quot;, 
Contact.Trend_Debt__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trend Debt</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trend_Expense__c</fullName>
        <formula>IF( 
ISBLANK( ContactId ), 
&quot;N/A&quot;, 
Contact.Trend_Expense__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trend Expense</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trend_Income__c</fullName>
        <formula>IF( 
ISBLANK( ContactId ), 
&quot;N/A&quot;, 
Contact.Trend_Income__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trend Income</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trend_Savings__c</fullName>
        <formula>IF( 
ISBLANK( ContactId ), 
&quot;N/A&quot;, 
Contact.Trend_Savings__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trend Savings</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>